{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 863,
  "lineage": "7c07a663-6ac0-d946-abde-0645fc59482b",
  "resources": [
    {
      "module": "module.Bastion-host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7cf821b91bcccbc",
            "arn": "arn:aws:ec2:ap-south-1:940539654326:instance/i-05a0c98bd330be2aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-role",
            "id": "i-05a0c98bd330be2aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rv_Pvtkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e1483f0eb9ef575",
            "private_dns": "ip-12-0-1-160.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.1.160",
            "public_dns": "ec2-3-109-5-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.5.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a849e01bd41a0ea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d21c09007676967",
            "tags": {
              "Name": "rv-bastionhost-ubuntu"
            },
            "tags_all": {
              "Name": "rv-bastionhost-ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e07b28f9f2f8d5d0"
            ]
          },
          "dependencies": [
            "module.Bastion-host.aws_security_group.Bastion-sg",
            "module.rv-vpc.aws_subnet.public_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:security-group/sg-0e07b28f9f2f8d5d0",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e07b28f9f2f8d5d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Bastion-sg",
            "name_prefix": "",
            "owner_id": "940539654326",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ece3529f30f897d",
            "association_id": "eipassoc-0534a822f742a14b2",
            "domain": "vpc",
            "id": "eipalloc-07ece3529f30f897d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b348a9f528056342",
            "private_dns": "ip-12-0-1-169.ap-south-1.compute.internal",
            "private_ip": "12.0.1.169",
            "public_dns": "ec2-13-127-147-69.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.147.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.rv-vpc.aws_internet_gateway.ig",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:internet-gateway/igw-0922d890d402c582c",
            "id": "igw-0922d890d402c582c",
            "owner_id": "940539654326",
            "tags": {
              "Environment": "rv",
              "Name": "rv-igw"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-igw"
            },
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ece3529f30f897d",
            "association_id": "eipassoc-0534a822f742a14b2",
            "connectivity_type": "public",
            "id": "nat-038967305d62c0378",
            "network_interface_id": "eni-0b348a9f528056342",
            "private_ip": "12.0.1.169",
            "public_ip": "13.127.147.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d21c09007676967",
            "tags": {
              "Environment": "rv",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.rv-vpc.aws_eip.nat_eip",
            "module.rv-vpc.aws_internet_gateway.ig",
            "module.rv-vpc.aws_subnet.public_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09cb48a0187d06d1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038967305d62c0378",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cb48a0187d06d1c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_eip.nat_eip",
            "module.rv-vpc.aws_internet_gateway.ig",
            "module.rv-vpc.aws_nat_gateway.nat",
            "module.rv-vpc.aws_route_table.private",
            "module.rv-vpc.aws_subnet.public_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0922d890d402c582c",
            "id": "r-rtb-0743510059c783d0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0743510059c783d0c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_internet_gateway.ig",
            "module.rv-vpc.aws_route_table.public",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:route-table/rtb-09cb48a0187d06d1c",
            "id": "rtb-09cb48a0187d06d1c",
            "owner_id": "940539654326",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038967305d62c0378",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "rv",
              "Name": "rv-private-route-table"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:route-table/rtb-0743510059c783d0c",
            "id": "rtb-0743510059c783d0c",
            "owner_id": "940539654326",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0922d890d402c582c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "rv",
              "Name": "rv-public-route-table"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b20438e7cfa48dd",
            "route_table_id": "rtb-09cb48a0187d06d1c",
            "subnet_id": "subnet-03f4391af82e990d2"
          },
          "dependencies": [
            "module.rv-vpc.aws_route_table.private",
            "module.rv-vpc.aws_subnet.private_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aaa880ea9ebb35c",
            "route_table_id": "rtb-09cb48a0187d06d1c",
            "subnet_id": "subnet-0525d5e9f0623b451"
          },
          "dependencies": [
            "module.rv-vpc.aws_route_table.private",
            "module.rv-vpc.aws_subnet.private_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae5b2a40f168df41",
            "route_table_id": "rtb-0743510059c783d0c",
            "subnet_id": "subnet-08d21c09007676967"
          },
          "dependencies": [
            "module.rv-vpc.aws_route_table.public",
            "module.rv-vpc.aws_subnet.public_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4f43e7d8c28310",
            "route_table_id": "rtb-0743510059c783d0c",
            "subnet_id": "subnet-0366a2d4c157c9b4d"
          },
          "dependencies": [
            "module.rv-vpc.aws_route_table.public",
            "module.rv-vpc.aws_subnet.public_subnet",
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:security-group/sg-0938053c66887c52f",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0938053c66887c52f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "rv-default-sg",
            "name_prefix": "",
            "owner_id": "940539654326",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "rv"
            },
            "tags_all": {
              "Environment": "rv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:subnet/subnet-03f4391af82e990d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f4391af82e990d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940539654326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "rv",
              "Name": "rv-ap-south-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-ap-south-1a-private-subnet"
            },
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:subnet/subnet-0525d5e9f0623b451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0525d5e9f0623b451",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940539654326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "rv",
              "Name": "rv-ap-south-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-ap-south-1b-private-subnet"
            },
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:subnet/subnet-08d21c09007676967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d21c09007676967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940539654326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "rv",
              "Name": "rv-ap-south-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-ap-south-1a-public-subnet"
            },
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:subnet/subnet-0366a2d4c157c9b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0366a2d4c157c9b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940539654326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "rv",
              "Name": "rv-ap-south-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-ap-south-1b-public-subnet"
            },
            "vpc_id": "vpc-0050a18fe07f06ca7"
          },
          "dependencies": [
            "module.rv-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rv-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:940539654326:vpc/vpc-0050a18fe07f06ca7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-040e543978e5062b2",
            "default_route_table_id": "rtb-04d74b71d217f9f35",
            "default_security_group_id": "sg-0ed1dc6bb2dab4f69",
            "dhcp_options_id": "dopt-09246976e21cd00d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0050a18fe07f06ca7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d74b71d217f9f35",
            "owner_id": "940539654326",
            "tags": {
              "Environment": "rv",
              "Name": "rv-vpc"
            },
            "tags_all": {
              "Environment": "rv",
              "Name": "rv-vpc"
            }
          }
        }
      ]
    }
  ]
}